[package]
authors = ["The Rust Project Developers"]
name = "collections"
version = "0.0.0"

[lib]
name = "collections"
path = "lib.rs"
test = false

[dependencies]
alloc = { path = "../liballoc" }
rustc_unicode = { path = "../librustc_unicode" }

[dependencies.core]
git = "https://github.com/phil-opp/nightly-libcore.git"
features = ["disable_float"]
